--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                         <a class="nav-link " aria-current="page" href="/Harsha200105/">Home</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link active " href="/Harsha200105/About.html">About</a>
+                        <a class="nav-link active " href="/Harsha200105/about.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
