--- a/about.html
+++ b/about.html
@@ -103,11 +103,10 @@
 
         <div class="row featurette d-flex justify-content-center align-items-center">
             <div class="col-md-7 order-md-1">
-                <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your
-                        mind.</span></h2>
-                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-                    euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,
-                    tellus ac cursus commodo.</p>
+                <h2 class="featurette-heading">Aims and Ambitions.<span class="text-muted">Designed for all of us.</span></h2>
+                <p class="lead">We aim to help all the beginners to settle in with coding and have the freedom to explore 
+                    everything they can unimaginably think of.
+                    Everthing you are stuck with we can help ya'll cope-up with it.</p>
             </div>
             <div class="col-md-5">
                 <img class="img-fluid"
