--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                         <a class="nav-link " aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link active " href="/about.html">About</a>
+                        <a class="nav-link active " href="/Technerd.github.io/about.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -49,7 +49,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact Us!</a>
+                        <a class="nav-link" href="/Technerd.github.io/contact.html">Contact Us!</a>
                     </li>
 
                     <div>
