--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
                     <p>
                         Technology, Coding and Trends
                     </p>
-                    <button class="btn btn-danger">Technology</button>
-                    <button class="btn btn-primary">Web Development</button>
-                    <button class="btn btn-success">Fun with Tech</button>
+                    <button class="btn btn-danger"><a href="#">Technology</a></button>
+                    <button class="btn btn-primary"><a href="#">Web Development</a></button>
+                    <button class="btn btn-success"><a href="#">Fun with Tech</a></button>
                 </div>
             </div>
             <div class="carousel-item">
