--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
                     <p>
                         Technology, Coding and Trends
                     </p>
-                    <button class="btn btn-danger"><a style="text-decoration: none" href="#">Technology</a></button>
-                    <button class="btn btn-primary"><a style="text-decoration: none" href="#">Web Development</a></button>
-                    <button class="btn btn-success"><a style="text-decoration: none" href="#">Fun with Tech</a></button>
+                    <button class="btn btn-danger"><a style="text-decoration: none;" style="color: white;" style="hover: white" href="#">Technology</a></button>
+                    <button class="btn btn-primary"><a style="text-decoration: none;" style="color: white;" style="hover: white" href="#">Web Development</a></button>
+                    <button class="btn btn-success"><a style="text-decoration: none;" style="color: white;" style="hover: white" href="#">Fun with Tech</a></button>
                 </div>
             </div>
             <div class="carousel-item">
