--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 
     <title>Code It Out! - Home for programmers</title>
 </head>
+    <style>
+        .tc{
+            text-decoration: none;
+            color: white;
+            opacity: 80%;
+        }
+        .tc:hover{
+            text-decoration: none;
+            color: whitesmoke;
+            opacity: 89%;
+        }
+    </style>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -156,9 +168,9 @@
                     <p>
                         Technology, Coding and Trends
                     </p>
-                    <button class="btn btn-danger"><a style="text-decoration: none;" style="color: white;" style="hover: white" href="#">Technology</a></button>
-                    <button class="btn btn-primary"><a style="text-decoration: none;" style="color: white;" style="hover: white" href="#">Web Development</a></button>
-                    <button class="btn btn-success"><a style="text-decoration: none;" style="color: white;" style="hover: white" href="#">Fun with Tech</a></button>
+                    <button class="tc" class="btn btn-danger"><a href="#">Technology</a></button>
+                    <button class="tc" class="btn btn-primary"><a href="#">Web Development</a></button>
+                    <button class="tc" class="btn btn-success"><a href="#">Fun with Tech</a></button>
                 </div>
             </div>
             <div class="carousel-item">
@@ -168,9 +180,9 @@
                     <p>
                         Technology, Coding and Trends
                     </p>
-                    <button class="btn btn-danger">Technology</button>
-                    <button class="btn btn-primary">Web Development</button>
-                    <button class="btn btn-success">Fun with Tech</button>
+                    <button class="tc" class="btn btn-danger"><a href="#">Technology</a></button>
+                    <button class="tc" class="btn btn-primary"><a href="#">Web Development</a></button>
+                    <button class="tc" class="btn btn-success"><a href="#">Fun with Tech</a></button>
                 </div>
             </div>
             <div class="carousel-item">
@@ -180,9 +192,9 @@
                     <p>
                         Technology, Coding and Trends
                     </p>
-                    <button class="btn btn-danger">Technology</button>
-                    <button class="btn btn-primary">Web Development</button>
-                    <button class="btn btn-success">Fun with Tech</button>
+                    <button class="tc" class="btn btn-danger"><a href="#">Technology</a></button>
+                    <button class="tc" class="btn btn-primary"><a href="#">Web Development</a></button>
+                    <button class="tc" class="btn btn-success"><a href="#">Fun with Tech</a></button>
                 </div>
             </div>
         </div>
