--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
     <style>
         .tc{
             text-decoration: none;
-            color: white;
+            text-color: white;
             opacity: 80%;
+            background: blue;
         }
         .tc:hover{
             text-decoration: none;
-            color: whitesmoke;
+            text-color: whitesmoke;
             opacity: 89%;
+            background: blue;
         }
     </style>
 
