--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
 
     <title>Code It Out! - Home for programmers</title>
 </head>
-    <style>
-        .tc{
+     <style>
+        .btn btn-danger{
             text-decoration: none;
             text-color: white;
             opacity: 80%;
-            background: blue;
+/*             background: blue; */
         }
-        .tc:hover{
+        .btn btn-danger:hover{
             text-decoration: none;
             text-color: whitesmoke;
             opacity: 89%;
             background: blue;
         }
     </style>
-
+ 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
