--- a/index.html
+++ b/index.html
@@ -15,16 +15,37 @@
      <style>
         .btn btn-danger{
             text-decoration: none;
-            text-color: white;
+            color: white;
             opacity: 80%;
 /*             background: blue; */
         }
         .btn btn-danger:hover{
             text-decoration: none;
-            text-color: whitesmoke;
+            color: whitesmoke;
             opacity: 89%;
-            background: blue;
+/*             background: blue; */
         }
+         .btn btn-primary{
+            text-decoration: none;
+            color: white;
+            opacity: 80%;
+         }
+         .btn btn-primary:hover{
+            text-decoration: none;
+            color: white;
+            opacity: 89%;
+         }
+         .btn btn-success{
+            text-decoration: none;
+            color: white;
+            opacity: 80%;
+         }
+         .btn btn-success:hover{
+            text-decoration: none;
+            color: white;
+            opacity: 89%;
+         }
+         
     </style>
  
 <body>
