--- a/index.html
+++ b/index.html
@@ -13,34 +13,34 @@
     <title>Code It Out! - Home for programmers</title>
 </head>
      <style>
-        .btn btn-danger{
+        .btn btn-danger a{
             text-decoration: none;
             color: white;
             opacity: 80%;
 /*             background: blue; */
         }
-        .btn btn-danger:hover{
+        .btn btn-danger a:hover{
             text-decoration: none;
             color: whitesmoke;
             opacity: 89%;
 /*             background: blue; */
         }
-         .btn btn-primary{
+         .btn btn-primary a{
             text-decoration: none;
             color: white;
             opacity: 80%;
          }
-         .btn btn-primary:hover{
+         .btn btn-primary a:hover{
             text-decoration: none;
             color: white;
             opacity: 89%;
          }
-         .btn btn-success{
+         .btn btn-success a{
             text-decoration: none;
             color: white;
             opacity: 80%;
          }
-         .btn btn-success:hover{
+         .btn btn-success a:hover{
             text-decoration: none;
             color: white;
             opacity: 89%;
