--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <title>Code It Out! - Home for programmers</title>
 </head>
-     <style>
+<!--      <style>
         .btn btn-danger a{
             text-decoration: none;
             color: white;
@@ -47,7 +47,7 @@
          }
          
     </style>
- 
+  -->
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
