--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
                     <p>
                         Technology, Coding and Trends
                     </p>
-                    <button class="btn btn-danger"><a style="color: white; text-decoration:none;" href="#">Technology</a></button>
-                    <button class="tc" class="btn btn-primary"><a style="color: white; text-decoration:none;" href="#">Web Development</a></button>
-                    <button class="tc" class="btn btn-success"><a style="color: white; text-decoration:none;" href="#">Fun with Tech</a></button>
+                    <button class="btn btn-danger"><a style="text-decoration:none;" href="#">Technology</a></button>
+                    <button class="btn btn-primary"><a style="color: white; text-decoration:none;" href="#">Web Development</a></button>
+                    <button class="btn btn-success"><a style="color: white; text-decoration:none;" href="#">Fun with Tech</a></button>
                 </div>
             </div>
             <div class="carousel-item">
@@ -203,9 +203,9 @@
                     <p>
                         Technology, Coding and Trends
                     </p>
-                    <button class="tc" class="btn btn-danger"><a style="color: white; text-decoration:none;" href="#">Technology</a></button>
-                    <button class="tc" class="btn btn-primary"><a style="color: white; text-decoration:none;" href="#">Web Development</a></button>
-                    <button class="tc" class="btn btn-success"><a style="color: white; text-decoration:none;" href="#">Fun with Tech</a></button>
+                    <button class="btn btn-danger"><a style="text-decoration:none;" href="#">Technology</a></button>
+                    <button class="btn btn-primary"><a style="text-decoration:none;" href="#">Web Development</a></button>
+                    <button class="btn btn-success"><a style="text-decoration:none;" href="#">Fun with Tech</a></button>
                 </div>
             </div>
             <div class="carousel-item">
@@ -215,9 +215,9 @@
                     <p>
                         Technology, Coding and Trends
                     </p>
-                    <button class="tc" class="btn btn-danger"><a style="color: white; text-decoration:none;" href="#">Technology</a></button>
-                    <button class="tc" class="btn btn-primary"><a style="color: white; text-decoration:none;" href="#">Web Development</a></button>
-                    <button class="tc" class="btn btn-success"><a style="color: white; text-decoration:none;" href="#">Fun with Tech</a></button>
+                    <button class="btn btn-danger"><a style="text-decoration:none;" href="#">Technology</a></button>
+                    <button class="btn btn-primary"><a style="text-decoration:none;" href="#">Web Development</a></button>
+                    <button class="btn btn-success"><a style="text-decoration:none;" href="#">Fun with Tech</a></button>
                 </div>
             </div>
         </div>
