--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
          
     </style>
   -->
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
@@ -113,7 +114,7 @@
                     <h5 class="modal-title" id="loginModalLabel">Login to Tech-World</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
+                <!-- <div class="modal-body">
                     <form>
                         <div class="mb-3">
                             <label for="exampleInputEmail1" class="form-label">Email address</label>
@@ -124,20 +125,24 @@
                         <div class="mb-3">
                             <label for="exampleInputPassword1" class="form-label">Password</label>
                             <input type="password" class="form-control" id="exampleInputPassword1">
-                        </div>
-                        <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Login</button>
+                        </div> -->
+                <div id="sawo-container" style="height: 300px; width: 300px;">
+                    <!-- <div class="mb-3 form-check">
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Login</button>
                     </form>
-                </div>
+                </div> -->
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
     </div>
+    </div>
+
+
 
 
     <!-- Sign Up Modal -->
@@ -191,9 +196,12 @@
                     <p>
                         Technology, Coding and Trends
                     </p>
-                    <button class="btn btn-danger"><a style="text-decoration:none; color:white;" href="#">Technology</a></button>
-                    <button class="btn btn-primary"><a style="text-decoration:none; color:white;" href="#">Web Development</a></button>
-                    <button class="btn btn-success"><a style="text-decoration:none; color:white;" href="#">Fun with Tech</a></button>
+                    <button class="btn btn-danger"><a style="text-decoration:none; color:white;"
+                            href="#">Technology</a></button>
+                    <button class="btn btn-primary"><a style="text-decoration:none; color:white;" href="#">Web
+                            Development</a></button>
+                    <button class="btn btn-success"><a style="text-decoration:none; color:white;" href="#">Fun with
+                            Tech</a></button>
                 </div>
             </div>
             <div class="carousel-item">
@@ -203,9 +211,12 @@
                     <p>
                         Technology, Coding and Trends
                     </p>
-                    <button class="btn btn-danger"><a style="text-decoration:none; color:white;" href="#">Technology</a></button>
-                    <button class="btn btn-primary"><a style="text-decoration:none; color:white;" href="#">Web Development</a></button>
-                    <button class="btn btn-success"><a style="text-decoration:none; color:white;" href="#">Fun with Tech</a></button>
+                    <button class="btn btn-danger"><a style="text-decoration:none; color:white;"
+                            href="#">Technology</a></button>
+                    <button class="btn btn-primary"><a style="text-decoration:none; color:white;" href="#">Web
+                            Development</a></button>
+                    <button class="btn btn-success"><a style="text-decoration:none; color:white;" href="#">Fun with
+                            Tech</a></button>
                 </div>
             </div>
             <div class="carousel-item">
@@ -215,9 +226,12 @@
                     <p>
                         Technology, Coding and Trends
                     </p>
-                    <button class="btn btn-danger"><a style="text-decoration:none; color:white;" href="#">Technology</a></button>
-                    <button class="btn btn-primary"><a style="text-decoration:none; color:white;" href="#">Web Development</a></button>
-                    <button class="btn btn-success"><a style="text-decoration:none; color:white;" href="#">Fun with Tech</a></button>
+                    <button class="btn btn-danger"><a style="text-decoration:none; color:white;"
+                            href="#">Technology</a></button>
+                    <button class="btn btn-primary"><a style="text-decoration:none; color:white;" href="#">Web
+                            Development</a></button>
+                    <button class="btn btn-success"><a style="text-decoration:none; color:white;" href="#">Fun with
+                            Tech</a></button>
                 </div>
             </div>
         </div>
@@ -284,6 +298,20 @@
 
 
     <!-- Optional JavaScript; choose one of the two! -->
+    <script src="http://websdk.sawolabs.com/sawo.min.js"></script>
+    <script>    var config = {        // should be same as the id of the container created on 3rd step        
+            containerID: "sawo-container",
+            // can be one of 'email' or 'phone_number_sms'        
+            identifierType: "email",
+            // Add the API key copied from 2nd step        
+            apiKey: "288dedec-20f7-4e50-9cb3-65f097ddaf05",
+            // Add a callback here to handle the payload sent by sdk        
+            onSuccess: (payload) => {
+                console.log(payload)
+            },
+        };
+        var sawo = new Sawo(config);
+        sawo.showForm();</script>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
