--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
             <div class="col-md-5">
                 <img class="img-fluid"
                     class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                    height="500" src="about2.jpg" alt="">
+                    height="500" src="Imagesrc/about2.jpg" alt="">
 
             </div>
         </div>
@@ -94,7 +94,7 @@
             <div class="col-md-5">
                 <img class="img-fluid"
                     class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                    height="500" src="about4.jpg" alt="">
+                    height="500" src="Imagesrc/about4.jpg" alt="">
 
             </div>
 
@@ -111,7 +111,7 @@
             <div class="col-md-5">
                 <img class="img-fluid"
                     class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                    height="500" src="about.6.jpg" alt="">
+                    height="500" src="Imagesrc/about.6.jpg" alt="">
 
             </div>
 
