--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="2.jpg" class="d-block w-100" alt="...">
+                <img src="Imagesrc/2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>Welcome to Code it Out</h2>
                     <p>
@@ -205,7 +205,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="6.jpg" class="d-block w-100" alt="...">
+                <img src="Imagesrc/6.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>The Best Coding Blog</h2>
                     <p>
@@ -220,7 +220,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="8.jpg" class="d-bdinglock w-100" alt="...">
+                <img src="Imagesrc/8.jpg" class="d-bdinglock w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>Coding for Everyone</h2>
                     <p>
@@ -260,7 +260,7 @@
                             <a href="#" class="stretched-link">Continue reading</a>
                         </div>
                         <div class="col-auto d-none d-lg-block">
-                            <img class="bd-placeholder-img" width="200" height="250" src="thumb1.jpg" alt="">
+                            <img class="bd-placeholder-img" width="200" height="250" src="Imagesrc/thumb1.jpg" alt="">
 
                         </div>
                     </div>
@@ -277,7 +277,7 @@
                             <a href="#" class="stretched-link">Continue reading</a>
                         </div>
                         <div class="col-auto d-none d-lg-block">
-                            <img class="bd-placeholder-img" width="200" height="250" src="10.jpg
+                            <img class="bd-placeholder-img" width="200" height="250" src="Imagesrc/10.jpg
                             " alt="">
 
                         </div>
